--- a/index.html
+++ b/index.html
@@ -1,28 +1,24 @@
-!DOCTYPE html>
+!<!DOCTYPE html>
 <html>
-    <head>
-        <title>Multiplication Table</title>
-        <style>
-            .cell {
-                display: inline-block;
-                width: 30px; height: 30px;
-                text-align: right;
-            }
-            .header {
-                background: lightblue;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>Multiplication Table</h1>
-        <script>
-            // output the header row
-            document.write('<span class="cell header">&times;</span>');
-            for (i = 0; i <= 10; i++) {
-                document.write('<span class="cell header">' + i + '</span>');
-            }
-            document.write('<br>');
-            // TODO: Write two nested for loops to output the rest of the multiplication table
-        </script>
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+    <script>
+                document.write("<center><table border='1px'>");
+                for(var a = 0; a <= 10; a++) {
+                    document.write("<tr style='height:10px'>");
+                    for(var b = 0; b <= 10; b++) {
+                    document.write("<td style='width:20px'><center><font size='1'>" 
+                        + a*b + "</center></font></td>");
+                    }
+                    document.write("</tr>");
+                }
+                document.write("</table></center>");
+    </script>
+
+</body>
 </html>
