added font size and spaced out code

--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
 </head>
 <body>
     <script>
-                document.write("<center><table border='1px'>");
-                for(var a = 0; a <= 10; a++) {
+                document.write("<table border='1px'>");
+                for(var a = 0; a <= 10; a++) 
+                {
                     document.write("<tr style='height:10px'>");
-                    for(var b = 0; b <= 10; b++) {
-                    document.write("<td style='width:20px'><center><font size='1'>" 
-                        + a*b + "</center></font></td>");
+    
+                    for(var b = 0; b <= 10; b++) 
+                    {
+                    document.write("<td style='width:20px'><font size=''>" 
+                        + a*b + "</font></td>");
                     }
-                    document.write("</tr>");
+
                 }
-                document.write("</table></center>");
+
     </script>
 
 </body>
