spaced out the code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
                     for(var b = 0; b <= 10; b++) 
                     {
-                    document.write("<td style='width:20px'><font size=''>" 
+                    document.write("<td style='width:20px'><font size='3'>" 
                         + a*b + "</font></td>");
                     }
 
