--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -6,22 +6,10 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
-    <script>
-                document.write("<table border='1px'>");
-                for(var a = 0; a <= 10; a++) 
-                {
-                    document.write("<tr style='height:10px'>");
-    
-                    for(var b = 0; b <= 10; b++) 
-                    {
-                    document.write("<td style='width:20px'><font size='3'>" 
-                        + a*b + "</font></td>");
-                    }
 
-                }
 
-    </script>
-
+<script src="script.js"></script>
 </body>
 </html>
